[package]
name = "PassworldProgram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm="0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#tui = "0.9"
rust-crypto = "0.2.36"
